1999-09-05  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* help/sv/*, help/Makefile.am: added Swedish translation of
	the docs.

1999-07-28  Zbigniew Chyla  <chyla@alice.ci.pwr.wroc.pl>

	* main.c : Use g_strdup_printf instead of g_strconcat for
	translatable strings (makes it easier to translate).

1999-06-28  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* help/C/index.html: describe the Get cursor value button in
	conversion dialog.

1999-06-24  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.c (gtk_hex_size_allocate, recalc_displays): added
	some sanity checks for widths and heights.
	
1999-06-20  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.c: major rewrite of the gc handling code. added some
	sanity checks.

1999-06-20  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* preferences.c, config.c, ghex.h: make showing the offset column
	configurable.
	* main.c, hex-document.c: respect offset column configuration when
	adding new views.
	* help/C/index.html: bring up to date.

1999-06-20  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.[ch]: added option to show offset of each line in
	a column on the left. complete rework of the cursor stuff.
	* hex-document.c: enable offsets. should be made configurable
	someday.

1999-06-19  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* converter.c: added a button to fetch the value under the
	cursor into converter.
	* gtkhex.c (gtk_hex_set_group_type): hide & show cursor.

1999-04-28  Ettore Perazzoli  <ettore@comm2000.it>

	* ghex.desktop: Added Italian translation.

1999-03-31  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* hex-document.c (hex_document_write): set changed to FALSE.
	
1999-03-25  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

        * gtkhex.c (gtk_hex_real_data_changed): don't bother to redraw
	anything if the area changed is not visible.
	* help/C/index.html: make it consistent with the application ;)

1999-03-24  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
