@@ -49,9 +49,9 @@ extern GnomeUIInfo help_menu[], file_menu[], view_menu[], main_menu[];
 
 #define NUM_MDI_MODES 4
 
-#define CHILD_MENU_PATH GNOME_MENU_FILE_STRING
-#define CHILD_LIST_PATH GNOME_MENU_FILES_PATH
-#define GROUP_MENU_PATH(p) p = g_strconcat(GNOME_MENU_EDIT_PATH,_("_Group Data As"),"/", NULL)
+#define CHILD_MENU_PATH "_File"
+#define CHILD_LIST_PATH "Fi_les/"
+#define GROUP_MENU_PATH "_Edit/_Group Data As/"
 
 typedef struct _PropertyUI {
 	GnomePropertyBox *pbox;
